Fix issue with whitespace on the right side

--- a/src/containers/Header.css
+++ b/src/containers/Header.css
@@ -26,3 +26,7 @@
   margin-top: 30px;
   margin-right: 50px;
 }
+
+.col-sm-8 {
+  margin-left: 180px;
+}
