--- a/src/containers/Portfolio.css
+++ b/src/containers/Portfolio.css
@@ -26,30 +26,10 @@
   margin-bottom: 30px;
 }
 
-.teamtracker-logo {
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  float: left;
-  top: -40px;
-}
-
-.swappaws-logo {
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  float: left;
-  top: -40px;
-}
-
 .swappaws-description {
-  position: absolute;
-  left: 350px;
-  top: 80px;
+  display: inline-block;
 }
 
 .teamtracker-description {
-  position: absolute;
-  left: 350px;
-  top: 220px;
+  display: inline-block;
 }
